--- a/src/coms/personal-center/views/personal-center.html
+++ b/src/coms/personal-center/views/personal-center.html
@@ -43,114 +43,9 @@
 						<img src="assets/img/right_arrow.png"/>
 					</div>
 				</div>
-				<div class="cen-right-down">
-					<h3 class="cen-h2">资源引用列表</h3>
-					<div class="type-select-box">
-					  	<select>
-							<option>全部</option>
-							<option>多媒体</option>
-							<option>多媒体</option>
-							<option>多媒体</option>
-							<option>多媒体</option>
-							<option>多媒体</option>
-							<option>多媒体</option>
-							<option>多媒体</option>
-							<option>多媒体</option>
-							<option>多媒体</option>
-							<option>多媒体</option>
-						</select>
-					</div>
-					<div class="resource-box">
-						<div class="box-title">
-							<div class="row">
-								<div class="col-md-8 col-sm-8">
-									资源名称
-								</div>
-								<div class="col-md-2 col-sm-2">
-									资源类型
-								</div>
-								<div class="col-md-2 col-sm-2">
-									资源日期
-								</div>
-							</div>
-						</div>
-						<div class="resource-list">
-							<ul class="row">
-								<li class="active">
-									<div class="col-md-8 col-sm-8">
-										<img src="assets/img/resource_img.png" />
-										<span class="resource-title">荷塘月色</span>
-									</div>
-									<div class="col-md-2 col-sm-2">
-										<span class="resource-type">动画</span>
-									</div>
-									<div class="col-md-2 col-sm-2">
-										<span class="resource-date">2016-3-28</span>
-									</div>
-								</li>
-								<li>
-									<div class="col-md-8 col-sm-8">
-										<img src="assets/img/resource_img.png" />
-										<span class="resource-title">荷塘月色</span>
-									</div>
-									<div class="col-md-2 col-sm-2">
-										<span class="resource-type">动画</span>
-									</div>
-									<div class="col-md-2 col-sm-2">
-										<span class="resource-date">2016-3-28</span>
-									</div>
-								</li>
-								<li>
-									<div class="col-md-8 col-sm-8">
-										<img src="assets/img/resource_img.png" />
-										<span class="resource-title">荷塘月色</span>
-									</div>
-									<div class="col-md-2 col-sm-2">
-										<span class="resource-type">动画</span>
-									</div>
-									<div class="col-md-2 col-sm-2">
-										<span class="resource-date">2016-3-28</span>
-									</div>
-								</li>
-								<li>
-									<div class="col-md-8 col-sm-8">
-										<img src="assets/img/resource_img.png" />
-										<span class="resource-title">荷塘月色</span>
-									</div>
-									<div class="col-md-2 col-sm-2">
-										<span class="resource-type">动画</span>
-									</div>
-									<div class="col-md-2 col-sm-2">
-										<span class="resource-date">2016-3-28</span>
-									</div>
-								</li>
-								<li>
-									<div class="col-md-8 col-sm-8">
-										<img src="assets/img/resource_img.png" />
-										<span class="resource-title">荷塘月色</span>
-									</div>
-									<div class="col-md-2 col-sm-2">
-										<span class="resource-type">动画</span>
-									</div>
-									<div class="col-md-2 col-sm-2">
-										<span class="resource-date">2016-3-28</span>
-									</div>
-								</li>
-							</ul>
-						</div>
-						<div class="pagination-box">
-							<div class="coms-pagination">
-							 	<uib-pagination total-items="bigTotalItems" ng-model="bigCurrentPage" max-size="maxSize"  boundary-link-numbers="true" previous-text="上一页" next-text="下一页"></uib-pagination>
-								<div class="page-go">
-									<span class="page-text">转到</span>
-									<input class="page-input"/>
-									<span class="page-go-btn">Go</span>
-								</div>
-							</div>
-						</div>
-						
-					</div>
-				</div>
+				<!-- 我的上传 -->
+				<div ng-controller="myUploadCtrl" data-ng-include="'/coms/personal-center/views/my-upload.html'"></div>
+				
 			</div>
 		</div>
 	</div>
