--- a/src/less/res.less
+++ b/src/less/res.less
@@ -333,6 +333,7 @@
   margin: 8px 0;
   cursor: pointer;
   font-size: 13px;
+  min-height: 120px;
 }
 .res-list-main .res-list-item:hover{
     background: #e6f4f4;
@@ -350,8 +351,8 @@
 }
 .res-list-thumb{
     margin-left: 55px;
-    width:100px;
-    height:100px;
+    max-width:130px;
+    max-height:130px;
     margin-right: 6px;
 }
 .res-thubmlist-info{
