--- a/src/coms/personal-center/views/personal-center.html
+++ b/src/coms/personal-center/views/personal-center.html
@@ -15,11 +15,11 @@
 				</div>
 				<div class="btn-group">
 					<ul>
-						<li><button class="btn-general btn-heavy">我的备课</button></li>
-						<li><button class="btn-general btn-light">我的上传</button></li>
-						<li><button class="btn-general btn-white">我的下载</button></li>
-						<li><button class="btn-general btn-white">我的评论</button></li>
-						<li><button class="btn-general btn-white">最近浏览</button></li>
+						<li><button class="btn-general btn-heavy" ng-click="switchItem(0)">我的备课</button></li>
+						<li><button class="btn-general btn-light" ng-click="switchItem(1)">我的上传</button></li>
+						<li><button class="btn-general btn-white" ng-click="switchItem(2)">我的下载</button></li>
+						<li><button class="btn-general btn-white" ng-click="switchItem(3)">我的评论</button></li>
+						<li><button class="btn-general btn-white" ng-click="switchItem(4)">最近浏览</button></li>
 					</ul>
 				</div>
 			</div>
@@ -43,8 +43,16 @@
 						<img src="assets/img/right_arrow.png"/>
 					</div>
 				</div>
+				<!-- 我的备课 -->
+				<div ng-show="switchItemCtrl[0]" ng-controller="myPrepareCtrl" data-ng-include="'/coms/personal-center/views/my-prepare.html'"></div>
 				<!-- 我的上传 -->
-				<div ng-controller="myUploadCtrl" data-ng-include="'/coms/personal-center/views/my-upload.html'"></div>
+				<div ng-show="switchItemCtrl[1]" ng-controller="myUploadCtrl" data-ng-include="'/coms/personal-center/views/my-upload.html'"></div>
+				<!-- 我的下载 -->
+				<div ng-show="switchItemCtrl[2]" ng-controller="myDownloadCtrl" data-ng-include="'/coms/personal-center/views/my-download.html'"></div>
+				<!-- 我的评论 -->
+				<!--<div ng-show="switchItemCtrl[3]" ng-controller="myCommentCtrl" data-ng-include="'/coms/personal-center/views/my-comment.html'"></div>-->
+				<!-- 最近浏览-->
+				<!--<div ng-show="switchItemCtrl[4]" ng-controller="myRecentCtrl" data-ng-include="'/coms/personal-center/views/my-recent.html'"></div>-->
 				
 			</div>
 		</div>
