--- a/src/less/personal-center.less
+++ b/src/less/personal-center.less
@@ -176,8 +176,8 @@
 }
 
 .resource-list li {
-    height: 80px;
-    line-height: 80px;
+    height: 100px;
+    line-height: 100px;
     font-size: 1.4rem;
     color: #666666;
 }
@@ -202,4 +202,8 @@
     width: 600px;
     margin: 0 auto;
     margin-top: 200px;
+}
+.person-thumb{
+    max-width: 80px;
+    max-height: 80px;
 }
