--- a/src/coms/personal-center/views/personal-center.html
+++ b/src/coms/personal-center/views/personal-center.html
@@ -50,9 +50,9 @@
 				<!-- 我的下载 -->
 				<div ng-show="switchItemCtrl[2]" ng-controller="myDownloadCtrl" data-ng-include="'/coms/personal-center/views/my-download.html'"></div>
 				<!-- 我的评论 -->
-				<!--<div ng-show="switchItemCtrl[3]" ng-controller="myCommentCtrl" data-ng-include="'/coms/personal-center/views/my-comment.html'"></div>-->
+				<div ng-show="switchItemCtrl[3]" ng-controller="myCommentCtrl" data-ng-include="'/coms/personal-center/views/my-comment.html'"></div>
 				<!-- 最近浏览-->
-				<!--<div ng-show="switchItemCtrl[4]" ng-controller="myRecentCtrl" data-ng-include="'/coms/personal-center/views/my-recent.html'"></div>-->
+				<div ng-show="switchItemCtrl[4]" ng-controller="myRecentCtrl" data-ng-include="'/coms/personal-center/views/my-recent.html'"></div>
 				
 			</div>
 		</div>
