--- a/src/coms/personal-center/views/my-recent.html
+++ b/src/coms/personal-center/views/my-recent.html
@@ -25,7 +25,7 @@
 		</div>
 		<div class="resource-list">
 			<ul class="row">
-				<li ng-repeat="list in downloadList.list">
+				<li ng-repeat="list in recentList.list">
 					<div class="col-md-6 col-sm-8">
 						<img class="person-thumb" ng-src="{{ list.imgPath?list.imgPath:'null'}}" fallback-src="assets/img/sample.png" />
 						<span class="resource-title">{{list.title}}</span>
