返回顶部 调整

--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -12,7 +12,12 @@
 .ctrl-tools{
     position: fixed;
     bottom: 100px;
-    right: 100px
+    right: 100px;
+}
+@media screen and (max-width: 1050px) { /*当屏幕尺寸小于1050px时，应用下面的CSS样式*/
+     .ctrl-tools{
+        right: 5px;
+    }
 }
 .ctrl-tools .ctrl-item{
     padding: 10px;
