--- a/src/coms/personal-center/views/personal-center.html
+++ b/src/coms/personal-center/views/personal-center.html
@@ -4,8 +4,8 @@
 			<div class="col-md-4 col-sm-12 cen-left">
 				<div class="cen-info">
 					<div class="user-avatar">
-						<img src="assets/img/settings/user_icon_md.png">
-						<span class="user-name">{{ user.trueName }}</span>
+						<img ng-src="{{user.userImage}}">
+						<span class="user-name">{{user.trueName }}</span>
 					</div>
 					<div class="user-info">
 						<span><img src="assets/img/loc.png" /><i>{{ user.termName }}</i>|<i>{{ user.subjectNames }}老师 </i>|<i ng-class="user.male == '男'? 'icon-male':'icon-female'"></i></span>
@@ -15,11 +15,11 @@
 				</div>
 				<div class="btn-group">
 					<ul>
-						<li><button class="btn-general btn-heavy">我的备课</button></li>
-						<li><button class="btn-general btn-light">我的上传</button></li>
-						<li><button class="btn-general btn-white">我的下载</button></li>
-						<li><button class="btn-general btn-white">我的评论</button></li>
-						<li><button class="btn-general btn-white">最近浏览</button></li>
+						<li><button class="btn-general btn-heavy" ng-click="setContent(1)">我的备课</button></li>
+						<li><button class="btn-general btn-light" ng-click="setContent(2)">我的上传</button></li>
+						<li><button class="btn-general btn-white" ng-click="setContent(3)">我的下载</button></li>
+						<li><button class="btn-general btn-white" ng-click="setContent(4)">我的评论</button></li>
+						<li><button class="btn-general btn-white" ng-click="setContent(5)">最近浏览</button></li>
 					</ul>
 				</div>
 			</div>
@@ -43,113 +43,7 @@
 						<img src="assets/img/right_arrow.png"/>
 					</div>
 				</div>
-				<div class="cen-right-down">
-					<h3 class="cen-h2">资源引用列表</h3>
-					<div class="type-select-box">
-					  	<select>
-							<option>全部</option>
-							<option>多媒体</option>
-							<option>多媒体</option>
-							<option>多媒体</option>
-							<option>多媒体</option>
-							<option>多媒体</option>
-							<option>多媒体</option>
-							<option>多媒体</option>
-							<option>多媒体</option>
-							<option>多媒体</option>
-							<option>多媒体</option>
-						</select>
-					</div>
-					<div class="resource-box">
-						<div class="box-title">
-							<div class="row">
-								<div class="col-md-8 col-sm-8">
-									资源名称
-								</div>
-								<div class="col-md-2 col-sm-2">
-									资源类型
-								</div>
-								<div class="col-md-2 col-sm-2">
-									资源日期
-								</div>
-							</div>
-						</div>
-						<div class="resource-list">
-							<ul class="row">
-								<li class="active">
-									<div class="col-md-8 col-sm-8">
-										<img src="assets/img/resource_img.png" />
-										<span class="resource-title">荷塘月色</span>
-									</div>
-									<div class="col-md-2 col-sm-2">
-										<span class="resource-type">动画</span>
-									</div>
-									<div class="col-md-2 col-sm-2">
-										<span class="resource-date">2016-3-28</span>
-									</div>
-								</li>
-								<li>
-									<div class="col-md-8 col-sm-8">
-										<img src="assets/img/resource_img.png" />
-										<span class="resource-title">荷塘月色</span>
-									</div>
-									<div class="col-md-2 col-sm-2">
-										<span class="resource-type">动画</span>
-									</div>
-									<div class="col-md-2 col-sm-2">
-										<span class="resource-date">2016-3-28</span>
-									</div>
-								</li>
-								<li>
-									<div class="col-md-8 col-sm-8">
-										<img src="assets/img/resource_img.png" />
-										<span class="resource-title">荷塘月色</span>
-									</div>
-									<div class="col-md-2 col-sm-2">
-										<span class="resource-type">动画</span>
-									</div>
-									<div class="col-md-2 col-sm-2">
-										<span class="resource-date">2016-3-28</span>
-									</div>
-								</li>
-								<li>
-									<div class="col-md-8 col-sm-8">
-										<img src="assets/img/resource_img.png" />
-										<span class="resource-title">荷塘月色</span>
-									</div>
-									<div class="col-md-2 col-sm-2">
-										<span class="resource-type">动画</span>
-									</div>
-									<div class="col-md-2 col-sm-2">
-										<span class="resource-date">2016-3-28</span>
-									</div>
-								</li>
-								<li>
-									<div class="col-md-8 col-sm-8">
-										<img src="assets/img/resource_img.png" />
-										<span class="resource-title">荷塘月色</span>
-									</div>
-									<div class="col-md-2 col-sm-2">
-										<span class="resource-type">动画</span>
-									</div>
-									<div class="col-md-2 col-sm-2">
-										<span class="resource-date">2016-3-28</span>
-									</div>
-								</li>
-							</ul>
-						</div>
-						<div class="pagination-box">
-							<div class="coms-pagination">
-							 	<uib-pagination total-items="bigTotalItems" ng-model="bigCurrentPage" max-size="maxSize"  boundary-link-numbers="true" previous-text="上一页" next-text="下一页"></uib-pagination>
-								<div class="page-go">
-									<span class="page-text">转到</span>
-									<input class="page-input"/>
-									<span class="page-go-btn">Go</span>
-								</div>
-							</div>
-						</div>
-						
-					</div>
+				<div class="cen-right-down" data-ng-include="htmlContent">
 				</div>
 			</div>
 		</div>
