添加下载，备课夹

--- a/src/coms/res-preview/views/comment.html
+++ b/src/coms/res-preview/views/comment.html
@@ -52,7 +52,7 @@
 		<span>浏览次数:{{VM.info.clickTimes}}</span>
 
 		<button class="btn btn-danger">加入备课夹</button>
-		<span class="down-orign">下载到本地</span>
+		<span class="down-orign" ng-click="resDownload(VM.resourceId)">下载到本地</span>
 
 	</div>
 </div>
