--- a/src/coms/res-preview/views/previewres.html
+++ b/src/coms/res-preview/views/previewres.html
@@ -66,6 +66,21 @@
 		<div ng-controller="resCommentCtrl" data-ng-include="'/coms/res-preview/views/comment.html'"></div>
 	
 	</div>
+	<!-- 备课夹悬浮  -->
+	<div class="prepare-fixed">
+		<div class="prepare-shop" ui-sref="prepare">
+			<img src="assets/img/shopcart.png"/>
+			<span class="shop-count">{{ shopCount }}</span>
+			<div class="prepare-text">备课夹</div>
+		</div>
+		<div class="prepare-ctrls">
+			<div class="ctrls-prepare-list" >
+				<div class="ctrls-prepare-list-item" ng-repeat="item in prepareList track by $index" >{{item.title}}</div>
+			</div>
+		</div>
+	</div>
+	
+	
 <!-- 模态框（Modal） -->
 	<div class="modal fade" id="editModel" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		<div class="modal-dialog">
