--- a/src/less/respreview.less
+++ b/src/less/respreview.less
@@ -14,7 +14,10 @@
     border-radius: 10px;
     outline: none;
 }
-
+#preview-container .slide-container .slide-arrow
+{
+    z-index: 10;
+}
 
 #preview-container{
     margin-top: -30px;
@@ -62,6 +65,8 @@
     padding: 10px;
     box-shadow: 0px 0px 5px @color5;
     display: none;
+    max-height: 630px;
+    overflow-y: auto;
 }
 #preview-container .mulu:hover{
     text-decoration: underline;
