--- a/src/less/font.less
+++ b/src/less/font.less
@@ -74,5 +74,12 @@ body{
 /*通用字体 颜色设置*/
 @fff: #fff;
 
+.text-ellipsis {
+    display: block;
+    overflow: hidden;
+    white-space: nowrap;
+    width: 100%;
+    text-overflow: ellipsis
+}
 
 
