--- a/src/less/res.less
+++ b/src/less/res.less
@@ -311,7 +311,9 @@
 .statistic-item:hover{
     color:#1589BE;
 }
-
+.statistic-tab .active{
+    color:#1589BE;
+}
 // 资源列表
 .res-list-main{
   margin-top: 60px;
@@ -346,8 +348,8 @@
   top: 40px;
 }
 .res-thubmlist-thumb{
-    width: 90%;
-    height: 170px;
+    max-width: 90%;
+    height: 150px;
 }
 .res-list-thumb{
     margin-left: 55px;
@@ -358,6 +360,9 @@
 .res-thubmlist-info{
     font-size: 13px;
 }
+.res-thubmlist-info label{
+    margin: 5px 0;
+}
 .res-list-info{
   position: absolute;
   line-height: 30px;
@@ -366,6 +371,7 @@
 .res-title{
     font-size: 17px;
     color:#040000;
+    width: 100%;
 }
 .res-type{
     margin-left: 5px;
@@ -417,7 +423,7 @@
   border-bottom: 1px dashed #9b9b9b;
   padding: 6px;
   margin: 8px 0;
-  height: 320px;
+  height: 310px;
 }
 .res-list-main .res-thubmlist-item:hover{
     background: #e6f4f4;
@@ -556,6 +562,5 @@
 .res-add-prepare-all{
     float: right;
     margin-top: -10px;
-    margin-left: 15px;
-    
+    margin-left: 15px; 
 }
