--- a/src/coms/res-system/views/sysres-content.html
+++ b/src/coms/res-system/views/sysres-content.html
@@ -79,7 +79,7 @@
 		<div class="page-ctrl" ng-hide="noDataCtrl">
 			<input class="res-checkbox-page" type="checkbox"> 本页全选
 			<span class="res-text-total"> 共 {{bigTotalItems}}条，</span>
-			<span class="res-text-perpage"> 每页显示<input type="text" ng-model="perPage" />条</span>
+			<span class="res-text-perpage"> 每页显示<input type="text" ng-model="VM.perPage" />条</span>
 			
 			<div class="res-select addPrepare res-add-prepare-all">
 				加入备课夹
