--- a/src/less/res.less
+++ b/src/less/res.less
@@ -363,6 +363,9 @@
 .res-thubmlist-info label{
     margin: 5px 0;
 }
+.res-thubmlist-info .res-title{
+    width: 90%;
+}
 .res-list-info{
   position: absolute;
   line-height: 30px;
@@ -421,7 +424,7 @@
 }
 .res-list-main .res-thubmlist-item {
   border-bottom: 1px dashed #9b9b9b;
-  padding: 6px;
+  padding: 8px;
   margin: 8px 0;
   height: 310px;
 }
