--- a/src/less/respreview.less
+++ b/src/less/respreview.less
@@ -1,19 +1,37 @@
-#preview-container .modal-content{
-    background: #fff;
-}
-#preview-container .modal-footer
+//#preview-container .modal-content{
+//  background: #fff;
+//}
+//#preview-container .modal-footer
+//{
+//  border-top:1px solid #ccc;
+//  border: none;
+//  text-align: right;
+//}
+//
+//#preview-container .modal-body textarea{
+//  width: 100%;
+//  min-height: 80px;
+//  border-radius: 10px;
+//  outline: none;
+//}
+#preview-container .editReplace
 {
-    border-top:1px solid #ccc;
-    border: none;
+    padding-right: 5px;
+    margin-top: 8px;
+}
+#preview-container .editReplace textarea
+{
+    width: 100%;
+    height: 50px;
+}
+#preview-container .edit-btn-select
+{
     text-align: right;
 }
 
-#preview-container .modal-body textarea{
-    width: 100%;
-    min-height: 80px;
-    border-radius: 10px;
-    outline: none;
-}
+
+
+
 #preview-container .slide-container .slide-arrow
 {
     z-index: 10;
@@ -195,6 +213,7 @@
 #preview-container .slide-list
 {
     margin-top: 0px;
+    width: 100% !important;
 }
 #preview-container .slide_head .type_box{
     height: 30px;
@@ -205,6 +224,11 @@
     text-overflow: ellipsis;
     text-align: center;
     position: relative;
+}
+@media  screen and  (max-width: 1200px) {
+  #preview-container .slide_head .type_box{
+   width: 50%;
+}  
 }
 #preview-container .slide_head i{
     margin-left: 5px;
