--- a/src/less/res.less
+++ b/src/less/res.less
@@ -435,6 +435,7 @@
     padding: 6px 10px;
     margin-right: 0;
     margin-left: 10px;
+    cursor: pointer;
 }
 .noDataCtrl{
     text-align: center;
@@ -446,8 +447,8 @@
 }
 .res-prepare-list{
     position: absolute;
-    right: 40px;
-    top:60px;
+    right: 36px;
+    top:55px;
     background: #fff;
     padding: 10px 20px;
     display: none;
@@ -461,6 +462,11 @@
 .res-prepare-list-item:hover{
     text-decoration: underline;
     color: #0094CE;
+}
+.res-prepare-thumb{
+    top:45px;
+    left: 0;
+    width: 100%;
 }
 .addPrepare-custom{
     width: 100px;
@@ -485,7 +491,7 @@
     cursor: pointer;
     z-index: 99999;
 }
-@media screen and (max-width: 1050px) { /*当屏幕尺寸小于1050px时，应用下面的CSS样式*/
+@media screen and (max-width: 1400px) { /*当屏幕尺寸小于1050px时，应用下面的CSS样式*/
      .prepare-fixed{
         right: 8px;
 
@@ -558,6 +564,7 @@
     border-radius: 2px;
     height: 22px;
     margin: 0 5px;
+    text-align: center;
 }
 .res-download-all{
     float: right;
@@ -566,4 +573,13 @@
     float: right;
     margin-top: -10px;
     margin-left: 15px; 
+}
+.res-prepare-thumb{
+    
+}
+// 加载中
+.loading{
+    text-align: center;
+    color: #3fbbcf;
+    padding-top: 10px;   
 }
