--- a/src/coms/personal-center/views/personal-center.html
+++ b/src/coms/personal-center/views/personal-center.html
@@ -15,19 +15,11 @@
 				</div>
 				<div class="btn-group">
 					<ul>
-<<<<<<< HEAD
-						<li><button class="btn-general btn-heavy" ng-click="setContent(1)">我的备课</button></li>
-						<li><button class="btn-general btn-light" ng-click="setContent(2)">我的上传</button></li>
-						<li><button class="btn-general btn-white" ng-click="setContent(3)">我的下载</button></li>
-						<li><button class="btn-general btn-white" ng-click="setContent(4)">我的评论</button></li>
-						<li><button class="btn-general btn-white" ng-click="setContent(5)">最近浏览</button></li>
-=======
 						<li><button class="btn-general btn-heavy" ng-click="switchItem(0)">我的备课</button></li>
 						<li><button class="btn-general btn-light" ng-click="switchItem(1)">我的上传</button></li>
 						<li><button class="btn-general btn-white" ng-click="switchItem(2)">我的下载</button></li>
 						<li><button class="btn-general btn-white" ng-click="switchItem(3)">我的评论</button></li>
 						<li><button class="btn-general btn-white" ng-click="switchItem(4)">最近浏览</button></li>
->>>>>>> 1b847022ce94ca33859b4b25bc84848b2d060334
 					</ul>
 				</div>
 			</div>
@@ -51,12 +43,9 @@
 						<img src="assets/img/right_arrow.png"/>
 					</div>
 				</div>
-<<<<<<< HEAD
-				<div class="cen-right-down" data-ng-include="htmlContent">
-				</div>
-=======
+
 				<!-- 我的备课 -->
-				<div ng-show="switchItemCtrl[0]" ng-controller="myPrepareCtrl" data-ng-include="'/coms/personal-center/views/my-prepare.html'"></div>
+				<div ng-show="switchItemCtrl[0]"  ng-controller="myPrepareCtrl" data-ng-include="'/coms/personal-center/views/my-prepare.html'"></div>
 				<!-- 我的上传 -->
 				<div ng-show="switchItemCtrl[1]" ng-controller="myUploadCtrl" data-ng-include="'/coms/personal-center/views/my-upload.html'"></div>
 				<!-- 我的下载 -->
@@ -65,12 +54,11 @@
 				<div ng-show="switchItemCtrl[3]" ng-controller="myCommentCtrl" data-ng-include="'/coms/personal-center/views/my-comment.html'"></div>
 				<!-- 最近浏览-->
 				<div ng-show="switchItemCtrl[4]" ng-controller="myRecentCtrl" data-ng-include="'/coms/personal-center/views/my-recent.html'"></div>
-				
->>>>>>> 1b847022ce94ca33859b4b25bc84848b2d060334
+
 			</div>
 		</div>
 	</div>
 </div>
 
 <!-- 模态框（Modal） -->
-<div ng-controller="uploadResController" data-ng-include="'/coms/personal-center/views/upload-modal.html'"></div>
+<!-- <div  ng-controller="uploadResController" data-ng-include="'/coms/personal-center/views/upload-modal.html'"></div> -->
