--- a/src/less/prepare.less
+++ b/src/less/prepare.less
@@ -62,7 +62,7 @@
     border-radius: 6px;
 }
 
-#prepare-content .new-prepare-title button {
+.btn-op {
     height: 30px;
     line-height: 25px;
     background-color: #3FBBCF;
