--- a/src/coms/personal-center/views/my-prepare.html
+++ b/src/coms/personal-center/views/my-prepare.html
@@ -1,55 +1,51 @@
 <div class="cen-right-down">
 	<h3 class="cen-h2">资源引用列表</h3>
 	<div class="type-select-box">
-		<select>
-			<option>全部</option>
-			<option>多媒体</option>
-			<option>多媒体</option>
-			<option>多媒体</option>
-			<option>多媒体</option>
+	  	<select ng-change="selectResType(tpSelected)" ng-model="tpSelected" >
+			<option ng-repeat="tp in resTypes" ng-bind="tp.mtype" value="{{tp}}"></option>
 		</select>
 	</div>
 	<div class="resource-box">
 		<div class="box-title">
 			<div class="row">
-				<div class="col-md-8 col-sm-8">
+				<div class="col-md-7 col-sm-7">
 					资源名称
 				</div>
 				<div class="col-md-2 col-sm-2">
 					资源类型
 				</div>
-				<div class="col-md-2 col-sm-2">
+				<div class="col-md-3 col-sm-3">
 					资源日期
 				</div>
 			</div>
 		</div>
-		<div class="resource-list">
+		<div class="resource-list" class="col-md-9">
 			<ul class="row">
-				<li ng-repeat="list in prepareList.list">
-					<div class="col-md-6 col-sm-8">
-						<img class="person-thumb" ng-src="{{ list.imgPath?list.imgPath:'null'}}" fallback-src="assets/img/sample.png" />
-						<span class="resource-title">{{list.title}}</span>
+				<li ng-repeat="res in prepareList track by $index" ng-class="{active: res.active}" ng-click="setResActive($index)">
+				<!-- <li class="active"> -->
+					<div class="col-md-7 col-sm-7">
+						<img ng-src="{{res.imgPath}}" />
+						<span class="resource-title" ng-bind="res.title"></span>
 					</div>
-					<div class="col-md-3 col-sm-2">
-						<span class="resource-type">{{list.unifyType}}</span>
+					<div class="col-md-2 col-sm-2">
+						<span class="resource-type" ng-bind="res.unifyType"></span>
 					</div>
-					<div class="col-md-3 col-sm-2">
-						<show-time class="resource-date" data-value="{{list.time | date:'yyyy-MM-dd HH:mm:ss'}}"></show-time>
+					<div class="col-md-3 col-sm-3">
+						<span class="resource-date"><show-time item-date data-value="{{res.time | date:'yyyy-MM-dd HH:mm:ss'}}"></show-time></span>
 					</div>
-					<div class="clearfix"></div>
 				</li>
-
 			</ul>
 		</div>
 		<div class="pagination-box">
 			<div class="coms-pagination">
-				<uib-pagination total-items="bigTotalItems" ng-model="bigCurrentPage" max-size="maxSize" boundary-link-numbers="true" previous-text="上一页" next-text="下一页"></uib-pagination>
+			 	<uib-pagination total-items="totalItems" ng-model="currentPage" max-size="maxSize"  boundary-link-numbers="true" previous-text="上一页" next-text="下一页"></uib-pagination>
 				<div class="page-go">
 					<span class="page-text">转到</span>
-					<input class="page-input" />
+					<input class="page-input"/>
 					<span class="page-go-btn">Go</span>
 				</div>
 			</div>
 		</div>
+		
 	</div>
 </div>
