--- a/src/coms/personal-center/views/my-recent.html
+++ b/src/coms/personal-center/views/my-recent.html
@@ -1,55 +1,56 @@
-<div class="cen-right-down">
-	<h3 class="cen-h2">资源引用列表</h3>
+
+	<h3 class="cen-h2" ng-bind="contentTitle"></h3>
 	<div class="type-select-box">
-		<select>
-			<option>全部</option>
-			<option>多媒体</option>
-			<option>多媒体</option>
-			<option>多媒体</option>
-			<option>多媒体</option>
+	  	<select>
+			<option ng-repeat="tp in resTypes" ng-bind="tp.mtype" ng-click="selectResType(tp.id)"></option>
 		</select>
 	</div>
 	<div class="resource-box">
 		<div class="box-title">
 			<div class="row">
-				<div class="col-md-8 col-sm-8">
+				<div class="col-md-6 col-sm-6">
 					资源名称
 				</div>
 				<div class="col-md-2 col-sm-2">
 					资源类型
 				</div>
 				<div class="col-md-2 col-sm-2">
-					资源日期
+					上传时间
+				</div>
+				<div class="col-md-2 col-sm-2">
+					操作
 				</div>
 			</div>
 		</div>
-		<div class="resource-list">
+		<div class="resource-list" class="col-md-9">
 			<ul class="row">
-				<li ng-repeat="list in recentList.list">
-					<div class="col-md-6 col-sm-8">
-						<img class="person-thumb" ng-src="{{ list.imgPath?list.imgPath:'null'}}" fallback-src="assets/img/sample.png" />
-						<span class="resource-title">{{list.title}}</span>
+				<!-- <li class="active" ng-repeat="res in myres"> -->
+				<li class="active" ng-repeat="res in myres">
+					<div class="col-md-4 col-sm-4">
+						<img src="assets/img/resource_img.png" />
+						<span class="resource-title">荷塘月色</span>
 					</div>
-					<div class="col-md-3 col-sm-2">
-						<span class="resource-type">{{list.unifyType}}</span>
+					<div class="col-md-2 col-sm-2">
+						<span class="resource-type">动画</span>
 					</div>
-					<div class="col-md-3 col-sm-2">
-						<show-time class="resource-date" data-value="{{list.time | date:'yyyy-MM-dd HH:mm:ss'}}"></show-time>
+					<div class="col-md-2 col-sm-2">
+						<span class="resource-date">2016-3-28</span>
 					</div>
-					<div class="clearfix"></div>
+					<div class="col-md-2 col-sm-2">
+						<button class="btn-op" ng-click="deleteRes(res)">删除</button>
+						<button class="btn-op" ng-click="editRes(res)">编辑</button>
+					</div>
 				</li>
-
 			</ul>
 		</div>
 		<div class="pagination-box">
 			<div class="coms-pagination">
-				<uib-pagination total-items="bigTotalItems" ng-model="bigCurrentPage" max-size="maxSize" boundary-link-numbers="true" previous-text="上一页" next-text="下一页"></uib-pagination>
+			 	<uib-pagination total-items="bigTotalItems" ng-model="bigCurrentPage" max-size="maxSize"  boundary-link-numbers="true" previous-text="上一页" next-text="下一页"></uib-pagination>
 				<div class="page-go">
 					<span class="page-text">转到</span>
-					<input class="page-input" />
+					<input class="page-input"/>
 					<span class="page-go-btn">Go</span>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
