增加资源选择

--- a/src/coms/res-system/views/sysres-content.html
+++ b/src/coms/res-system/views/sysres-content.html
@@ -24,7 +24,7 @@
 		<ul class="res-ul-list" ng-show="isList">
 			<div class="loading" ng-show="isLoading"><i class="icon-spinner icon-spin icon-3x"></i></div>
 			<li class="animated slideInUp res-list-item" ng-repeat="list in resList.list track by $index" ng-init="parentIndex = $index">
-				<input class="res-checkbox" type="checkbox" ng-click="addItemSelect(list.id)">
+				<input class="res-checkbox" checklist-model="resList.select" checklist-value="list.id" type="checkbox" ng-click="addItemSelect(list.id)">
 				<img class="prepare-shop res-list-thumb" ng-src="{{list.thumbnailpath?list.thumbnailpath:'null'}}" fallback-src="assets/img/sample.png" ui-sref="previewres({resId:list.id,curTfcode:curTfcode})">
 				<span class="res-list-info" ui-sref="previewres({resId:list.id,curTfcode:curTfcode})">
 					<label class="res-title text-ellipsis">{{ list.title }}</label>
@@ -52,7 +52,7 @@
 		<ul class="res-ul-thubmlist" ng-show="!isList">
 			<div class="loading" ng-show="isLoading"><i class="icon-spinner icon-spin icon-3x"></i></div>
 			<li class="animated slideInUp res-thubmlist-item col-md-4" ng-repeat="list in resList.list track by $index"  ng-init="parentIndex = $index">
-				<input class="res-checkbox" type="checkbox">
+				<input class="res-checkbox" type="checkbox" checklist-model="resList.select" checklist-value="list.id">
 				<img class="prepare-shop res-thubmlist-thumb" ng-src="{{list.thumbnailpath}}" fallback-src="assets/img/title.jpg">
 				<div class="res-thubmlist-info">
 					<label class="res-title text-ellipsis">{{ list.title }}</label>
@@ -80,7 +80,7 @@
 		<div class="noDataCtrl" ng-show="noDataCtrl">当前选择下还没有资源哦</div>
 		<div style="clear:both"></div>
 		<div class="page-ctrl" ng-show="isLoadingFinish">
-			<input class="res-checkbox-page" type="checkbox" ng-click=""> 本页全选
+			<input class="res-checkbox-page" type="checkbox" ng-model="VM.checkAll" ng-click="checkAll()"> 本页全选
 			<span class="res-text-total"> 共 {{bigTotalItems}}条，</span>
 			<span class="res-text-perpage"> 每页显示<input type="text" ng-model="VM.perPage" ng-blur="changPerPage()"/>条</span>
 			
@@ -91,7 +91,7 @@
 					<div class="res-prepare-list-item" ng-show="prepareList.length == 0">当前目录节点下还没有备课夹，点击加入备课夹，会默认创建</div>
 				</div>
 			</div>
-			<label class="res-download res-download-all"><i class="icon-download-alt"></i>点击下载</label>
+			<label class="res-download res-download-all" ng-click="downLoadSelect()"><i class="icon-download-alt"></i>点击下载</label>
 		</div>
 		<div class="coms-pagination" ng-show="isLoadingFinish">
 		 	<uib-pagination total-items="bigTotalItems" ng-model="VM.currentPageCtrl" max-size="maxSize"  boundary-link-numbers="true" previous-text="上一页" next-text="下一页" num-pages="perPage" ng-change="pageChanged()"></uib-pagination>
